fix: spacing cards container

--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,7 @@ footer {
 
   .cards-container {
     flex-direction: row;
-    margin-top: 1rem;
+    margin-top: 2rem;
   }
 
   .card {
